# templates

./: README.md  init.py
.github/workflows/: docker_build_and_push.yml
devcontainer/: README.md  build.py
devcontainer/.devcontainer/: Dockerfile  build_context.txt  devcontainer.json
devcontainer/.devcontainer/configs/: bash_profile  bashrc
devcontainer/.devcontainer/scripts/: generate_vcs_configs.py  sapling_init
devcontainer/conda/: Dockerfile
python/: .flake8  .gitignore  Readme.md  init.py  init_config.json  package.json  pyrightconfig.json  requirements.txt
python/.devcontainer/: Dockerfile  devcontainer.json
python/scripts/: clean  fmt  lint  pre-commit.sh  rdx  t
python_simple/: README.md  init.py  poetry.toml  pyproject.toml  pyrightconfig.json  pytest.ini
python_simple/.devcontainer/: Dockerfile  devcontainer.json
python_simple/python/typings/: Readme.md
sapling/: README.md  build.py  build_deb.py  init.py  init_config.json  sapling_init.py
sapling/.devcontainer/: Dockerfile  devcontainer.json
sapling/locale/: default_locale  locale.gen
typescript/: .eslintignore  .gitignore  .prettierrc  Readme.md  init.py  init_config.json  package.json  tsconfig.json
typescript/.devcontainer/: Dockerfile  devcontainer.json
typescript/.devcontainer/configs/: gitconfig  slconfig
typescript/.devcontainer/scripts/: prebuild.sh
typescript/reference/: typescript.md
typescript/scripts/: sapling_init.py
typescript/src/: index.ts
