[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.core.dependencies]
pydantic = "^2.5.2"

[tool.poetry.group.bin.dependencies]
black = "^23.11.0"
colorama = "0.4.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
radon = "6.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
